--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="./index.css" />
     <style>
-      @import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
+      @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
     </style>
   </head>
   <body>
@@ -62,6 +62,63 @@
           </div>
         </div>
       </div>
+    </div>
+    <div class="section1">
+      <div class="zurag1">
+        <h2><img src="./Heading 3.png" alt="" /></h2>
+        <p>Two sizes. Faster chip. Does it all.</p>
+        <div class="garchig2">
+          <div class="garchig11">Learn more</div>
+          <div class="buy">Buy</div>
+        </div>
+        <h3>Hello, Apple Intelligence.</h3>
+      </div>
+      <div class="zurag2">
+        <h2>AirPods Pro 2</h2>
+        <p>Now with a Hearing Aid feature.2</p>
+        <div class="garchig2">
+          <div class="garchig11">Learn more</div>
+          <div class="buy">Buy</div>
+        </div>
+      </div>
+      <div class="zurag3">
+        <h2><img src="./Frame 3.png" alt="" /></h2>
+        <h3>SERIES 10</h3>
+        <p>Thinstant classic.</p>
+        <div class="garchig2">
+          <div class="garchig11">Learn more</div>
+          <div class="buy">Buy</div>
+        </div>
+      </div>
+      <div class="zurag4">
+        <h2>MacBook Air</h2>
+        <p>Lean. Mean. M3 machine.</p>
+        <div class="garchig2">
+          <div class="garchig11">Learn more</div>
+          <div class="buy">Buy</div>
+        </div>
+      </div>
+      <div class="zurag5">
+        <h2><img src="./Frame 4.png" alt="" /></h2>
+        <p>Get $180–$650 in credit when you trade in iPhone 12 or higher.3</p>
+        <div class="garchig2">
+          <div class="garchig11">Learn more</div>
+          <div class="buy">Buy</div>
+        </div>
+      </div>
+      <div class="zurag6">
+        <h2><img src="./Frame 4 (1).png" alt="" /></h2>
+        <p>Get up to 3% Daily Cash back with every purchase.</p>
+        <div class="garchig2">
+          <div class="garchig11">Learn more</div>
+          <div class="buy">Buy</div>
+        </div>
+      </div>
+    </div>
+    <div class="suul">
+      <div class="suul1">2</div>
+      <div class="suul2">g</div>
+      <div class="suul3"></div>
     </div>
   </body>
 </html>
