--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <title>Document</title>
     <link rel="stylesheet" href="./index.css" />
     <style>
-      @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
+      @import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
     </style>
   </head>
   <body>
     <div class="head">
       <p><img src="./Item → Link - Apple.png" alt="" /></p>
-      <nav class="headug">Store</nav>
+      <a href="" class="headug">Store</a>
       <nav class="headug">Mac</nav>
       <nav class="headug">iPad</nav>
       <nav class="headug">iPhone</nav>
@@ -26,6 +26,7 @@
       <p><img src="./Item → Button - Search apple.com.png" alt="" /></p>
       <p><img src="./Item.png" alt="" /></p>
     </div>
+    <div id="headclone"></div>
     <div id="section">
       <p id="ug">
         We’re donating $5 to the Global Fund for every purchase made with
@@ -65,60 +66,140 @@
     </div>
     <div class="section1">
       <div class="zurag1">
-        <h2><img src="./Heading 3.png" alt="" /></h2>
-        <p>Two sizes. Faster chip. Does it all.</p>
-        <div class="garchig2">
-          <div class="garchig11">Learn more</div>
-          <div class="buy">Buy</div>
+        <div class="zurag31">
+          <h2><img src="./Heading 3.png" alt="" /></h2>
+          <p>Two sizes. Faster chip. Does it all.</p>
+          <div class="garchig2">
+            <div class="garchig11">Learn more</div>
+            <div class="buy">Buy</div>
+          </div>
         </div>
         <h3>Hello, Apple Intelligence.</h3>
       </div>
       <div class="zurag2">
-        <h2>AirPods Pro 2</h2>
-        <p>Now with a Hearing Aid feature.2</p>
-        <div class="garchig2">
-          <div class="garchig11">Learn more</div>
-          <div class="buy">Buy</div>
+        <div class="zurag21">
+          <h2>AirPods Pro 2</h2>
+          <p>Now with a Hearing Aid feature.2</p>
+          <div class="garchig2">
+            <div class="garchig11">Learn more</div>
+            <div class="buy">Buy</div>
+          </div>
         </div>
       </div>
       <div class="zurag3">
-        <h2><img src="./Frame 3.png" alt="" /></h2>
-        <h3>SERIES 10</h3>
-        <p>Thinstant classic.</p>
-        <div class="garchig2">
-          <div class="garchig11">Learn more</div>
-          <div class="buy">Buy</div>
+        <div class="zurag31">
+          <h2><img src="./Frame 3.png" alt="" /></h2>
+          <h3>SERIES 10</h3>
+          <p>Thinstant classic.</p>
+          <div class="garchig2">
+            <div class="garchig11">Learn more</div>
+            <div class="buy">Buy</div>
+          </div>
         </div>
       </div>
       <div class="zurag4">
-        <h2>MacBook Air</h2>
-        <p>Lean. Mean. M3 machine.</p>
-        <div class="garchig2">
-          <div class="garchig11">Learn more</div>
-          <div class="buy">Buy</div>
+        <div class="zurag31">
+          <h2>MacBook Air</h2>
+          <p>Lean. Mean. M3 machine.</p>
+          <div class="garchig2">
+            <div class="garchig11">Learn more</div>
+            <div class="buy">Buy</div>
+          </div>
         </div>
       </div>
       <div class="zurag5">
-        <h2><img src="./Frame 4.png" alt="" /></h2>
-        <p>Get $180–$650 in credit when you trade in iPhone 12 or higher.3</p>
-        <div class="garchig2">
-          <div class="garchig11">Learn more</div>
-          <div class="buy">Buy</div>
+        <div class="zurag31">
+          <h2><img src="./Frame 4.png" alt="" /></h2>
+          <p>Get $180–$650 in credit when you trade in iPhone 12 or higher.3</p>
+          <div class="garchig2">
+            <div class="garchig11">Learn more</div>
+            <div class="buy">Buy</div>
+          </div>
         </div>
       </div>
       <div class="zurag6">
-        <h2><img src="./Frame 4 (1).png" alt="" /></h2>
-        <p>Get up to 3% Daily Cash back with every purchase.</p>
-        <div class="garchig2">
-          <div class="garchig11">Learn more</div>
-          <div class="buy">Buy</div>
+        <div class="zurag31">
+          <h2><img src="./Frame 4 (1).png" alt="" /></h2>
+          <p>Get up to 3% Daily Cash back with every purchase.</p>
+          <div class="garchig2">
+            <div class="garchig11">Learn more</div>
+            <div class="buy">Buy</div>
+          </div>
         </div>
       </div>
     </div>
     <div class="suul">
-      <div class="suul1">2</div>
-      <div class="suul2">g</div>
-      <div class="suul3"></div>
+      <div class="suul1" id="suul111">
+        <div class="suul21">
+          <span>Stream now</span><strong>Comedy ·</strong> Will they make
+          history…or fake it?
+        </div>
+      </div>
+      <div class="suul2" id="suul222">
+        <div class="suul21">
+          <span>Stream now</span><strong>Comedy ·</strong> Will they make
+          history…or fake it?
+        </div>
+      </div>
+      <div class="suul3" id="suul333">
+        <div class="suul21">
+          <span>Stream now</span><strong>Comedy ·</strong> Will they make
+          history…or fake it?
+        </div>
+      </div>
+      <div class="suul4" id="suul444">
+        <div class="suul21">
+          <span>Stream now</span><strong>Comedy ·</strong> Will they make
+          history…or fake it?
+        </div>
+      </div>
+      <div class="suul5" id="suul555">
+        <div class="suul21">
+          <span>Stream now</span><strong>Comedy ·</strong> Will they make
+          history…or fake it?
+        </div>
+      </div>
+      <div class="suul6" id="suul666">
+        <div class="suul21">
+          <span>Stream now</span><strong>Comedy ·</strong> Will they make
+          history…or fake it?
+        </div>
+      </div>
+      <div class="suul7" id="suul777">
+        <div class="suul21">
+          <span>Stream now</span><strong>Comedy ·</strong> Will they make
+          history…or fake it?
+        </div>
+      </div>
+      <div class="suul8" id="suul888">
+        <div class="suul21">
+          <span>Stream now</span><strong>Comedy ·</strong> Will they make
+          history…or fake it?
+        </div>
+      </div>
+    </div>
+    <div class="tablist">
+      <a href="#suul111" class="tab"></a>
+      <a href="#suul222" class="tab"></a>
+      <a href="#suul333" class="tab"></a>
+      <a href="#suul444" class="tab"></a>
+      <a href="#suul555" class="tab"></a>
+      <a href="#suul666" class="tab"></a>
+      <a href="#suul777" class="tab"></a>
+      <a href="#suul888" class="tab"></a>
+    </div>
+    <div class="footer">
+      <div class="footer1">
+        <h6>Improve Your Posture wicth Pilates</h6>
+      </div>
+      <div class="footer2">
+        <h6>NBA 2K25 Arcade Edition</h6>
+      </div>
+      <div class="footer3">
+        <h6>Strength with Kim</h6>
+      </div>
+      <div class="footer4"><img src="./Image.png" alt="" />R&B Now</div>
+      <div class="footer5"><img src="./Link5.png" alt="" /></div>
     </div>
   </body>
 </html>
