--- a/index.1.html
+++ b/index.1.html
@@ -37,10 +37,269 @@
     <div class="blur2"></div>
     <div class="blur3"></div>
     <div class="blur4"></div>
-    <div class="frame1">
-      <div id="section">
-        <div id="section1"><span> Store.</span>Gift magic this holiday.</div>
-        <div id="section2"></div>
+
+    <div id="section11">
+      <div id="section12"><span> Store.</span>Gift magic this holiday.</div>
+      <div id="section21">
+        <div>
+          <img
+            src="./store-chat-holiday-specialist-icon-202411_AV3.png"
+            alt=""
+          />
+        </div>
+        <div id="zuragugnuud">
+          <div>
+            <p>Need shopping help?</p>
+            <a href="">Ask a Specialist</a>
+          </div>
+          <div>
+            <p>Visit an Apple Store</p>
+            <a href="">Find one near you</a>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="minis">
+      <div class="minis1">
+        <img src="./store-card-13-mac-nav-202410.png" alt="" />
+        Mac
+      </div>
+      <div class="minis1">
+        <img src="./store-card-13-iphone-nav-202409_GEO_US.png" alt="" />iphone
+      </div>
+      <div class="minis1">
+        <img src="./store-card-13-ipad-nav-202405.png" alt="" />iPad
+      </div>
+      <div class="minis1">
+        <img src="./store-card-13-watch-nav-202409.png" alt="" />Apple Watch
+      </div>
+      <div class="minis1">
+        <img src="./store-card-13-vision-pro-nav-202401.png" alt="" />Apple
+        Vision Pro
+      </div>
+      <div class="minis1">
+        <img src="./store-card-13-airpods-nav-202409.png" alt="" />Airpods
+      </div>
+      <div class="minis1">
+        <img src="./store-card-13-airtags-nav-202108.png" alt="" />AirTag
+      </div>
+      <div class="minis1">
+        <img src="./store-card-13-appletv-nav-202210.png" alt="" />Apple TV 4K
+      </div>
+      <div class="minis1">
+        <img src="./store-card-13-homepod-nav-202301.png" alt="" />Homepad
+      </div>
+      <div class="minis1">
+        <img
+          src="./store-card-13-accessories-nav-202409.png"
+          alt=""
+        />Accessories
+      </div>
+      <div class="minis1">
+        <img
+          src="./store-card-13-holiday-giftcards-asit-agc-nav-202111.png"
+          alt=""
+        />Apple Gift Card
+      </div>
+    </div>
+    <div id="bagts1">
+      <p><span>The latest.</span>Let them unwrap wonders.</p>
+      <div class="ursdag">
+        <div class="zurag1">
+          <div class="zurags">
+            <h4>
+              APPLE INTELLIGENCE <img src="./Superscript → ∆.png" alt="" />
+            </h4>
+            <h2>iPhone 16 Pro</h2>
+            <h3>From $999 or $41.62/mo. for 24 mo.*</h3>
+          </div>
+        </div>
+        <div class="zurag2">
+          <div class="zurags">
+            <h2>Apple Watch Series 10</h2>
+            <h3>From $399 or $33.25/mo. for 12 mo.</h3>
+          </div>
+        </div>
+        <div class="zurag3">
+          <div class="zurags">
+            <h4>
+              APPLE INTELLIGENCE <img src="./Superscript → ∆.png" alt="" />
+            </h4>
+            <h2>iPad mini</h2>
+            <h3>From $499 or $41.58/mo. for 12 mo.</h3>
+          </div>
+        </div>
+        <div class="zurag4">
+          <div class="zurags">
+            <h4>
+              APPLE INTELLIGENCE <img src="./Superscript → ∆.png" alt="" />
+            </h4>
+            <h2>MacBook Pro</h2>
+            <h3>From $1599 or $133.25/mo. for 12 mo.</h3>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div id="bagts2">
+      <p><span>Personalization.</span>Let them unwrap wonders.</p>
+      <div class="ursdag">
+        <div class="zurag20">
+          <div id="zurags20">
+            <div id="laimda">Make their gift one of a kind.</div>
+          </div>
+        </div>
+        <div class="zurag21">
+          <img src="./airpods-max-select-202409-purple.png" alt="" />
+          <img src="./List - AirPods Max - PurpleAvailable colors.png" alt="" />
+          <div class="mongo">
+            <div class="lai2">
+              <h4>Free Engraving</h4>
+              <h2>AirPods Max - Purple</h2>
+            </div>
+            <h3>$549.00</h3>
+          </div>
+        </div>
+        <div class="zurag21">
+          <img src="./airpods-pro-2-hero-select-202409.png" alt="" />
+          <img
+            src="./List - AirPods Max - PurpleAvailable colors.png"
+            alt=""
+            class="laichu"
+          />
+          <div class="mongo">
+            <div class="lai2">
+              <h4>Free Engraving</h4>
+              <h2>AirPods Pro 2</h2>
+            </div>
+            <h3>$249.00</h3>
+          </div>
+        </div>
+        <div class="zurag21">
+          <img src="./airpods-4-anc-select-202409.png" alt="" />
+          <img
+            src="./List - AirPods Max - PurpleAvailable colors.png"
+            alt=""
+            class="laichu"
+          />
+          <div class="mongo">
+            <div class="lai2">
+              <h4>Free Engraving</h4>
+              <h2>AirPods 4 with Active Noise Cancellation</h2>
+            </div>
+            <h3>$179.00</h3>
+          </div>
+        </div>
+        <div class="zurag21">
+          <img src="./MX2D3.png" alt="" />
+          <img
+            src="./List - AirPods Max - PurpleAvailable colors.png"
+            alt=""
+            class="laichu"
+          />
+          <div class="mongo">
+            <div class="lai2">
+              <h4>Free Engraving</h4>
+              <h2>Apple Pencil Pro</h2>
+            </div>
+            <h3>$49.00</h3>
+          </div>
+        </div>
+        <div class="zurag21">
+          <img
+            src="./36d7e67985c8efaa8d3eb3e76015e0998ef9509b.jpg"
+            alt=""
+            class="img21"
+          />
+          <img
+            src="./List - AirPods Max - PurpleAvailable colors.png"
+            alt=""
+            class="laichu"
+          />
+          <div class="mongo">
+            <div class="lai2">
+              <h4>Free Engraving</h4>
+              <h2>AirPods 4 with Active Noise Cancellation</h2>
+            </div>
+            <h3>$179.00</h3>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div id="bagts3">
+      <p><span>Holiday Picks.</span>Add more magic to the moment.</p>
+      <div class="ursdag">
+        <div class="zurag30">
+          <div id="zurags20">
+            <div id="laimda">Surprise your favorites with these favorites.</div>
+          </div>
+        </div>
+        <div class="zurag31">
+          <img src="./MYY73.png" alt="" />
+          <img
+            src="./List - iPhone 16 Silicone Case with MagSafe – Star FruitAvailable colors.png"
+            alt=""
+          />
+          <div class="mongo">
+            <div class="lai2">
+              <h4>New</h4>
+              <h2>iPhone 16 Silicone Case with MagSafe - Star Fruit</h2>
+            </div>
+            <h3>$49.00</h3>
+          </div>
+        </div>
+        <div class="zurag31">
+          <img src="./homepod-mini-select-white-202110.png" alt="" />
+          <img src="./List - HomePod mini - WhiteAvailable colors.png" alt="" />
+          <div class="mongo">
+            <div class="lai2">
+              <h4>.</h4>
+              <h2>HomePod mini - White</h2>
+            </div>
+            <h3>$99.00</h3>
+          </div>
+        </div>
+        <div class="zurag31">
+          <img src="./MWK73.png" alt="" />
+          <img
+            src="./List - Smart Folio for iPad Air 11-inch (M2) - SageAvailable colors.png"
+            alt=""
+          />
+          <div class="mongo">
+            <div class="lai2">
+              <h4>.</h4>
+              <h2>Smart Folio for iPad Air 11 - inch (M2) - Sage</h2>
+            </div>
+            <h3>$79.00</h3>
+          </div>
+        </div>
+        <div class="zurag31">
+          <img src="./MUW43.png" alt="" />
+          <img
+            src="./List - Beats Solo 4 — On-Ear Wireless Headphones – Slate BlueAvailable colors.png"
+            alt=""
+          />
+          <div class="mongo">
+            <div class="lai2">
+              <h4>New</h4>
+              <h2>Smart Folio for iPad Air 11 - inch (M2) - Sage</h2>
+            </div>
+            <h3>$79.00</h3>
+          </div>
+        </div>
+        <div class="zurag31">
+          <img src="./MUW43.png" alt="" class="img21" />
+          <img src="./List - AirPods Max - PurpleAvailable colors.png" alt="" />
+          <div class="mongo">
+            <div class="lai2">
+              <h4>New</h4>
+              <h2>
+                Beats Solo 4 - On-Ear Wireless Headphones - Slate Blue $79.00
+              </h2>
+            </div>
+            <h3>$79.00</h3>
+          </div>
+        </div>
       </div>
     </div>
   </body>
