--- a/index.1.html
+++ b/index.1.html
@@ -12,7 +12,7 @@
   <body>
     <div class="head">
       <p><img src="./Item → Link - Apple.png" alt="" /></p>
-      <a href="" class="headug">Store</a>
+      <a href="./index.html" class="headug">Store</a>
       <nav class="headug">Mac</nav>
       <nav class="headug">iPad</nav>
       <nav class="headug">iPhone</nav>
