--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <div class="head">
       <p><img src="./Item → Link - Apple.png" alt="" /></p>
-      <a href="" class="headug">Store</a>
+      <a href="./index.1.html" class="headug">Store</a>
       <nav class="headug">Mac</nav>
       <nav class="headug">iPad</nav>
       <nav class="headug">iPhone</nav>
@@ -23,8 +23,10 @@
       <nav class="headug">Entertainment</nav>
       <nav class="headug">Accessories</nav>
       <nav class="headug">Support</nav>
-      <p><img src="./Item → Button - Search apple.com.png" alt="" /></p>
-      <p><img src="./Item.png" alt="" /></p>
+      <div class="head1">
+        <p><img src="./Item → Button - Search apple.com.png" alt="" /></p>
+        <p><img src="./Item.png" alt="" /></p>
+      </div>
     </div>
     <div id="headclone"></div>
     <div id="section">
