--- a/index.1.html
+++ b/index.1.html
@@ -144,9 +144,7 @@
       <p><span>Personalization.</span>Let them unwrap wonders.</p>
       <div class="ursdag">
         <div class="zurag20">
-          <div id="zurags20">
-            <div id="laimda">Make their gift one of a kind.</div>
-          </div>
+          <div id="laimda">Make their gift one of a kind.</div>
         </div>
         <div class="zurag21">
           <img src="./airpods-max-select-202409-purple.png" alt="" />
@@ -230,9 +228,7 @@
       <p><span>Holiday Picks.</span>Add more magic to the moment.</p>
       <div class="ursdag">
         <div class="zurag30">
-          <div id="zurags20">
-            <div id="laimda">Surprise your favorites with these favorites.</div>
-          </div>
+          <div id="laimda">Surprise your favorites with these favorites.</div>
         </div>
         <div class="zurag31">
           <img src="./MYY73.png" alt="" />
@@ -300,6 +296,131 @@
             <h3>$79.00</h3>
           </div>
         </div>
+      </div>
+    </div>
+
+    <div id="bagts4">
+      <p><span>Only at Apple.</span>With you every step of the holiday</p>
+      <div class="ursdag">
+        <div class="box11">
+          <div id="laimda">
+            <p>
+              Get gifts in time for the holidays with two hour delivery,² free
+              delivery,or easy pickup.
+            </p>
+          </div>
+        </div>
+        <div class="box12">
+          <div class="box121">
+            <p>Customize your Mac and create your own style of Apple Watch.</p>
+          </div>
+          <div class="box121">
+            <p>Free extended returns between now and 1/8/25.</p>
+          </div>
+          <div class="box121">
+            <p>Pay in full or pay over time. Your choice.</p>
+          </div>
+          <div class="box121">
+            <p>
+              Make them yours. Engrave a mix of emoji, names, and numbers for
+              free.
+            </p>
+          </div>
+        </div>
+        <div class="box13">
+          <div id="box131">APPLE TRADE IN</div>
+          <div id="box132">
+            Trade in your current device. Get credit toward a new one.³
+          </div>
+        </div>
+        <div class="box14">
+          <div id="box131">APPLE SPECIALIST</div>
+          <div id="box132">
+            Find gifts with an Apple Specialist in a store or online.
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div id="bagts5">
+      <p><span>The Apple Experience.</span>Even more awe in store.</p>
+      <div class="ursdag">
+        <div class="box51">
+          <div id="box131">APPLE MUSIC</div>
+          <div id="box132">Get 3 months of Apple Music free.</div>
+          <div id="box133">
+            Included with the purchase of select Apple devices.
+          </div>
+        </div>
+        <div class="box52">
+          <div id="box521">APPLE TV+</div>
+          <div id="box522">Get 3 months free when you buy an Apple device.</div>
+        </div>
+        <div class="box53">
+          <div id="box132">Six Apple services. One easy subscription.</div>
+        </div>
+        <div class="box54">
+          <div id="box131">APPLE INTELLIGENCE</div>
+          <div id="box132">
+            New features for writing, focus,communication, and more.
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div id="bagts6">
+      <p>
+        <span>Special Savings.</span>iPhone carrier deals and exclusive savings
+        for school,
+      </p>
+      <nav>businesses, and more.</nav>
+
+      <div class="ursdag">
+        <div class="box61">
+          <div id="box131">CARRIER DEALS</div>
+          <div id="box132">
+            Apple. Your one‑stop shop for incredible carrier deals.
+          </div>
+          <div id="box133">
+            Get up to $1000 in credit on a new iPhone with AT&T, Boost Mobile,
+            T‑Mobile, or Verizon. Trade‑in may be required.⁴
+          </div>
+        </div>
+        <div class="box62">
+          <div id="box131">EDUCATION</div>
+          <div id="box132">Buy a new Mac or iPad with education savings.</div>
+        </div>
+        <div class="box63">
+          <div id="box131">CERTIFIED REFURBISHED</div>
+          <div id="box132">
+            Shop refurbished Apple products backed by a one‑year warranty.
+          </div>
+        </div>
+        <div class="box64">
+          <div id="box521">BUSINESS</div>
+          <div id="box522">
+            From enterprise to small business, we’ll work with you.
+          </div>
+        </div>
+        <div class="box65">
+          <div id="box131">GOVERNMENT</div>
+          <div id="box132">
+            Special pricing is available for state, local, and federal agencies.
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="footer">
+      <div id="footer1">Quick Links</div>
+      <div id="footer2">
+        <nav class="footers">
+          Order Status <img src="./Vector9.png" alt="" />
+        </nav>
+        <nav class="footers">
+          Shoppping Help<img src="./Vector9.png" alt="" />
+        </nav>
+        <nav class="footers">Returns<img src="./Vector9.png" alt="" /></nav>
+        <nav class="footers">Your Saves<img src="./Vector9.png" alt="" /></nav>
       </div>
     </div>
   </body>
