--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         </div>
       </div>
       <div class="pro161">
-        <div class="garchig">
+        <div class="garchig16">
           <h2>iPhone 16</h2>
           <p>Hello, Apple intelligence</p>
           <div class="garchig2">
@@ -202,6 +202,9 @@
       </div>
       <div class="footer4"><img src="./Image.png" alt="" />R&B Now</div>
       <div class="footer5"><img src="./Link5.png" alt="" /></div>
+    </div>
+    <div id="button">
+      <img src="./Button - play the gallery.png" alt="" />
     </div>
   </body>
 </html>
